# ekf_state_estimation

./: .gitignore  CMakeLists.txt  README.md
Matlab/: Ekf.m  FilterParameters.m  Kalman.slx  Measurement.m  State.m  StateEstimationFilter.slx  StateEstimationFilter.slx.r2019a  StateEstimationFilter.slxc  computeVehicleGroundSpeed.m  constrainValue.m  createEkfDataset.m  deltaAngleToQuaternion.m  ecef2enu.m  enforceMatrixSymmetry.m  estimationFilterSymbolic.m  lla2ecef.m  quatToRollPitchYaw.m  quatToRotMat.m  quaternionNormalize.m  quaternionProduct.m  resyncData.m  rollPitchYawToRotMat.m  skewMatrix.m  stateEstimationFilter.m  state_est_kaist.m  state_est_main.m  symbolic_gps_conversion.m  unit_test_ekf.m  vehicleKinematics.m  wrapAngle.m
include/: Ekf.hpp  Ekf2d.hpp  Ekf3d.hpp  FilterParameters.hpp  FilterUtils.hpp  Gps.hpp  GpsConversion.hpp  Measurement.hpp  RingBuffer.hpp  State.hpp  State2d.hpp  State3d.hpp
src/: Ekf.cpp  Ekf2d.cpp  Ekf3d.cpp  EkfLocNode.cpp  FilterUtils.cpp  GpsConversion.cpp  test_ekf.cpp  unit_test.cpp
